syntax = "proto3";
option go_package = "snitch/pkg/proto/gen/snitch/v1;snitchv1";

package snitch.v1;

message Empty { }

message CreateReportRequest {
  string report_text = 1;
  string reporter_id = 2;
  string reported_id = 3;
}

message CreateReportResponse {
  string report_id = 1;
}

message ListReportsRequest {
  optional string reporter_id = 1;
  optional string reported_id = 2;
}

message ListReportsResponse {
  repeated CreateReportRequest reports = 1;
}

message DeleteReportRequest {
  string report_id = 1;
}

message DeleteReportResponse {
  string report_id = 1;
}

service ReportService {
  rpc CreateReport(CreateReportRequest) returns (CreateReportResponse) {};
  rpc ListReports(ListReportsRequest) returns (ListReportsResponse) {};
  rpc DeleteReport(DeleteReportRequest) returns (DeleteReportResponse) {};
}


